# no-comment-hook

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
eval/: README.md  run.py
hooks/: hooks.json
scripts/: install-hooks.py  setup.sh
src/: collect.rs  extract.rs  main.rs  options.rs  review.rs
src/review/: defer.rs  hunks.rs  parse.rs  prefilter.rs  prompt.rs  runner.rs
